tests/ui/typeck/issue-86721-return-expr-ice.rev1.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-86721-return-expr-ice.rs:9:22
   |
LL |     const U: usize = return;
   |                      ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0572`.
